package com.taxicooperativa.exception;

public class ConductorNoHabilitadoException extends RuntimeException{
    public ConductorNoHabilitadoException(String mensaje) {
        super(mensaje);
    }
}
